# DockerRunnerBasic

./: .gitignore  CMakeLists.txt  DockerMultiUserRunner.pro  Makefile  README.md  cdocker.cpp  cdocker.h  cdockercontainer.cpp  cdockercontainer.h  cphprunner.cpp  cphprunner.h  globals.h  main.cpp  utils.cpp  utils.h
.github/: build-debian.sh
.github/.debian/: control
.github/workflows/: cmake.yml
